[package]
name = "pos-tagging"
version = "0.1.0"
edition = "2021"
authors = ["Neil Kaushikkar <neil.kaushikkar@gmail.com>"]
description = "A Rust implementation of the the Viterbi algorithm for part-of-speech tagging."
repository = "https://github.com/nkaush/dd-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
indicatif = "0.17"