[package]
name = "pos-tagger"
version = "0.1.0"
edition = "2021"
authors = ["Neil Kaushikkar <neil.kaushikkar@gmail.com>"]
description = "A Rust implementation of the the Viterbi algorithm for part-of-speech tagging."
repository = "https://github.com/nkaush/dd-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17"
bincode = "1.3.3"